--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "@heeler/ui": "^1.0.1",
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.2.0",
